erDiagram
    USER {
        int id PK
        string name
        string email
        string password
        string role "super_admin or admin"
    }

    PRODUCT {
        int id PK
        string name
        int quantity_in_stock
        decimal buying_price
        decimal selling_price
    }

    ORDER {
        int id PK
        date order_date
        string order_type "purchase or sale"
        int total_amount
        decimal total_price
        string status "pending, completed"
    }

    ORDER_ITEM {
        int id PK
        int order_id FK
        int product_id FK
        decimal price
        int amount
    }

    USER ||--o{ ORDER : "creates"
    PRODUCT ||--o{ ORDER_ITEM : "appears in"
    ORDER ||--o{ ORDER_ITEM : "contains"